--- a/pages/contact.html
+++ b/pages/contact.html
@@ -85,7 +85,7 @@
             </div>
 
             <div class="location">
-                <h1>Basedd in</h1>
+                <h1>Based in</h1>
 
                 <h2>Nairobi Kenya,</h2>
                 <h2>Port Louis Mauritius</h2>
