--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="photo-cont">
-          <img src="./sitemedia/me3.jpg" alt="me" />
+          <img src="./sitemedia/me.jpg" alt="me" />
         </div>
       </section>
     </div>
