--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,7 +36,7 @@
             <div class="link-margin">
               <a href="../index.html">Home</a>
               <a href="work.html">Projects</a>
-              <a href="projects.html">Work</a>
+              <a href="projects.html">Work Experience</a>
               <a href="contact.html">Contact</a>
             </div>
           </div>
