--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="link-margin">
               <a href="index.html">Home</a>
               <a href="./pages/work.html">Projects</a>
-              <a href="./pages/projects.html">Work</a>
+              <a href="./pages/projects.html">Work Experience</a>
               <a href="./pages/contact.html">Contact</a>
             </div>
           </div>
