--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,7 @@
       <nav class="destop-nav">
         <a href="../index.html">Home</a>
         <a href="work.html">Projects</a>
-        <a href="projects.html">Work</a>
+        <a href="projects.html">Work Experience</a>
         <a href="contact.html">Contact</a>
       </nav>
 
