--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
       referrerpolicy="no-referrer"
     />
     <title>Home Page</title>
+    <script type="text/javascript">
+      window.smartlook ||
+        (function (d) {
+          var o = (smartlook = function () {
+              o.api.push(arguments);
+            }),
+            h = d.getElementsByTagName("head")[0];
+          var c = d.createElement("script");
+          o.api = new Array();
+          c.async = true;
+          c.type = "text/javascript";
+          c.charset = "utf-8";
+          c.src = "https://web-sdk.smartlook.com/recorder.js";
+          h.appendChild(c);
+        })(document);
+      smartlook("init", "e08847406dcf2ba7ac536c849e75fc098db76384", {
+        region: "eu",
+      });
+    </script>
   </head>
   <body>
     <header>
