--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,7 +48,7 @@
       <div class="form">
         <h1>Reach Out</h1>
 
-        <form>
+        <form action="https://formsubmit.co/langatkevin64@gmail.com" method="POST">
           <input type="text" name="" id="" placeholder="Full Name" />
 
           <input type="email" name="" id="" placeholder="E-mail" />
