--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,11 +49,11 @@
         <h1>Reach Out</h1>
 
         <form action="https://formsubmit.co/langatkevin64@gmail.com" method="POST">
-          <input type="text" name="" id="" placeholder="Full Name" />
+          <input type="text" name="name" id="" placeholder="Full Name" />
 
-          <input type="email" name="" id="" placeholder="E-mail" />
+          <input type="email" name="email" id="" placeholder="E-mail" />
 
-          <input type="text" name="" id="" placeholder="Message" />
+          <input type="text" name="message" id="" placeholder="Message" />
 
           <button type="submit">Submit</button>
         </form>
