--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,8 +47,18 @@
     <div class="contacts-cont">
       <div class="form">
         <h1>Reach Out</h1>
-
         <form action="https://formsubmit.co/langatkevin64@gmail.com" method="POST">
+  <input type="text" name="name" id="" placeholder="Full Name" />
+
+  <input type="email" name="email" id="" placeholder="E-mail" />
+
+  <textarea name="message" id="" placeholder="Message"></textarea>
+
+  <button type="submit">Submit</button>
+</form>
+
+
+<!--         <form action="https://formsubmit.co/langatkevin64@gmail.com" method="POST">
           <input type="text" name="name" id="" placeholder="Full Name" />
 
           <input type="email" name="email" id="" placeholder="E-mail" />
@@ -56,7 +66,7 @@
           <input type="text" name="message" id="" placeholder="Message" />
 
           <button type="submit">Submit</button>
-        </form>
+        </form> -->
       </div>
 
       <div class="contact-details-cont">
