--- a/pages/projects.html
+++ b/pages/projects.html
@@ -125,7 +125,7 @@
           <a href="https://www.linkedin.com/in/langatkevin/" target="_blank"
             ><i class="fab fa-linkedin-in"></i
           >
-          <a href="https://www.linkedin.com/in/langatkevin/" target="_blank"
+          <a href="https://www.instagram.com/langatk3vin/" target="_blank"
             ><i class="fab fa-instagram"></i
           >
         </div>
