Added the look dashboard

--- a/pages/work.html
+++ b/pages/work.html
@@ -67,9 +67,36 @@
         </div>
       </div>
 
+      <div class="projects-div"></div>
+        <div class="project-description">
+          <h1>01/Loan Portfolio Optimisation for TheLook Fintech</h1>
+
+          <h2 id="notop">
+            Leveraging Data Analytics to Improve Loan Management and Decision-making
+          </h2>
+
+          <!-- <h2>I used the Decision Tree Classifier to predict loan approval, </h2> -->
+          <p>
+            I developed a comprehensive dashboard to help TheLook Fintech's Treasury department track <b 
+            performance and optimise its loan portfolio. I used BigQuery, SQL, Looker Enterprise, <b and LookML to examine important indicators such as total outstanding loans, loan status distribution, <b 
+            borrowers' geographical concentration, and loan reasons. The project aims to keep loan outflows below <b incoming repayments, identify the primary reasons for loan applications, and monitor <b 
+            borrowers' geographical distribution. Key findings included a slight excess in outstanding loans above the recommended threshold, a healthy current loan rate of 87.19%, and insights on popular loan objectives, <b including debt consolidation. This data-driven strategy promotes proactive loan portfolio management and informed <b decision-making for long-term growth.
+          </p>
+
+          <a
+            href="https://github.com/langatkevin/Loan-Approval-with-Machine-Learning"
+            target="_blank"
+            >More shots from this project</a
+          >
+        </div>
+
+        <div class="poject-img">
+          <img src="../sitemedia/TheLook_Dashboard.png" alt="project" />
+        </div>
+      </div>
       <div class="projects-div">
         <div class="project-description">
-          <h1>01/Predicting Loan Approval with Machine Learning</h1>
+          <h1>02/Predicting Loan Approval with Machine Learning</h1>
 
           <h2 id="notop">
             Automating Loan Eligibility for Dream Housing Finance Company
@@ -101,7 +128,7 @@
       <div class="projects-div">
         <div class="project-description">
           <h1>
-            02/Predicting Human Activity with Binomial Logistic Regression
+            03/Predicting Human Activity with Binomial Logistic Regression
           </h1>
 
           <h2 id="notop">
