--- a/pages/work.html
+++ b/pages/work.html
@@ -77,7 +77,17 @@
 
           <!-- <h2>I used the Decision Tree Classifier to predict loan approval, </h2> -->
           <p>
-            I developed a comprehensive dashboard to help TheLook Fintech's Treasury department track performance and optimise its loan portfolio. I used BigQuery, SQL, Looker Enterprise, <br> and LookML to examine important indicators such as total outstanding loans, loan status distribution, <br> borrowers' geographical concentration, and loan reasons. The project aims to keep loan outflows below <br> incoming repayments, identify the primary reasons for loan applications, and monitor <br> borrowers' geographical distribution. Key findings included a slight excess in outstanding loans above the recommended threshold, a healthy current loan rate of 87.19%, and insights on popular loan objectives, <br> including debt consolidation. This data-driven strategy promotes proactive loan portfolio management and informed <br> decision-making for long-term growth.
+            I developed a comprehensive dashboard to help TheLook Fintech's Treasury 
+            department track performance and optimise its loan portfolio. I used BigQuery, 
+            SQL, Looker Enterprise, and LookML to examine important indicators such 
+            as total outstanding loans, loan status distribution, borrowers' geographical 
+            concentration, and loan reasons. The project aims to keep loan outflows below 
+            incoming repayments, identify the primary reasons for loan applications, 
+            and monitor borrowers' geographical distribution. Key findings included 
+            a slight excess in outstanding loans above the recommended threshold, 
+            a healthy current loan rate of 87.19%, and insights on popular loan objectives, 
+            including debt consolidation. This data-driven strategy promotes proactive loan 
+            portfolio management and informed decision-making for long-term growth.
           </p>
 
           <a
