Added new skills

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <h3>Main Software</h3>
 
           <div class="list">
-            Python, MongoDB, PowerBI, Google Cloud, MySQL, and Tableau
+            Python, MongoDB, Microsoft PowerBI, Google Cloud Storage, MySQL, Postgress, Looker, LookerML, Dataproc, and Tableau
           </div>
         </div>
 
@@ -103,8 +103,8 @@
           <h3>Main Skills</h3>
 
           <div class="list">
-            Data Analysis, Data Visualisation, Statistical Tests, Machine
-            Learning, AB Testing
+            Data Acquisition, Data Processing, Data Curation, Data Modelling, Data Blending, Data Loading, Data Analysis, Data Visualisation, Dashboarding, Statistical Tests, Machine
+            Learning, AB Testing, DAX, 
           </div>
         </div>
       </section>
