--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
     <footer>
       <div class="footer-content">
         <div class="left-cont">
-          <h2>I'm Thrilled to</h2>
+          <h2>I'm Thrilled to be the</h2>
 
-          <h2>be the answer to your next project.</h2>
+          <h2> answer to your next project.</h2>
         </div>
 
         <div class="right-cont">
