--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
           <div class="list">
             Data Acquisition, Data Processing, Data Curation, Data Modelling, Data Blending, Data Loading, Data Analysis, Data Visualisation, Dashboarding, Statistical Tests, Machine
-            Learning, AB Testing, and DAX 
+            Learning, AB Testing, Data Governance and DAX 
           </div>
         </div>
       </section>
