--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <h3>Main Software</h3>
 
           <div class="list">
-            Python, MongoDB, Microsoft PowerBI, Google Cloud Storage, MySQL, Postgress, Looker, LookerML, Dataproc, and Tableau
+            Python, MongoDB, Microsoft PowerBI, Google Cloud Storage, MySQL, Postgres, Looker, LookerML, Dataproc, and Tableau
           </div>
         </div>
 
