--- a/pages/projects.html
+++ b/pages/projects.html
@@ -58,7 +58,7 @@
             href="https://docs.google.com/document/d/1Bygog-YJf0RHSLnchKwEdhToq8RPwOLIYOFejNaP5-Q/edit?usp=sharing"
             target="_blank"
             class="resume-link"
-            ><button>DOWNLOAD MY FULL RESUME</button>
+            ><button>DOWNLOAD MY RESUME</button>
           </a>
         </div>
 
