update html structure

--- a/pages/work.html
+++ b/pages/work.html
@@ -67,7 +67,9 @@
         </div>
       </div>
 
-      <div class="projects-div"></div>
+
+
+      <div class="projects-div">
         <div class="project-description">
           <h1>01/Loan Portfolio Optimisation for TheLook Fintech</h1>
 
@@ -75,25 +77,14 @@
             Leveraging Data Analytics to Improve Loan Management and Decision-making
           </h2>
 
-          <!-- <h2>I used the Decision Tree Classifier to predict loan approval, </h2> -->
           <p>
-            I developed a comprehensive dashboard to help TheLook Fintech's Treasury 
-            department track performance and optimise its loan portfolio. I used BigQuery, 
-            SQL, Looker Enterprise, and LookML to examine important indicators such 
-            as total outstanding loans, loan status distribution, borrowers' geographical 
-            concentration, and loan reasons. The project aims to keep loan outflows below 
-            incoming repayments, identify the primary reasons for loan applications, 
-            and monitor borrowers' geographical distribution. Key findings included 
-            a slight excess in outstanding loans above the recommended threshold, 
-            a healthy current loan rate of 87.19%, and insights on popular loan objectives, 
-            including debt consolidation. This data-driven strategy promotes proactive loan 
-            portfolio management and informed decision-making for long-term growth.
+            Developed a dashboard for TheLook Fintech's Treasury department to track loan performance. Key insights include optimizing loan outflows, monitoring borrower distribution, and identifying popular loan purposes.
           </p>
 
           <a
-            href="https://github.com/langatkevin/The-Look-Dashboard-Exercutive-Summary"
-            target="_blank"
-            >More shots from this project</a
+                  href="https://github.com/langatkevin/The-Look-Dashboard-Exercutive-Summary"
+                  target="_blank"
+          >More shots from this project</a
           >
         </div>
 
@@ -101,6 +92,9 @@
           <img src="../sitemedia/TheLook_Dashboard.png" alt="project" />
         </div>
       </div>
+
+
+
       <div class="projects-div">
         <div class="project-description">
           <h1>02/Predicting Loan Approval with Machine Learning</h1>
@@ -164,6 +158,7 @@
           <img src="../sitemedia/proj2.jpg" alt="project" />
         </div>
       </div>
+
     </div>
 
     <footer>
@@ -205,7 +200,7 @@
             ><i class="fab fa-instagram"></i
           >
         </div>
-        
+
         <div class="copy-right flex justify-center">
           <h3>&copy; Langat Kevin 2024</h3>
         </div>
