--- a/index.html
+++ b/index.html
@@ -33,17 +33,26 @@
     </script>
   </head>
   <body>
-    <header class="">
-      <div class="logo-cont">
-        <img src="./sitemedia/logo.png" alt="me" />
-      </div>
+    <header class="" >
+<!--      <div class="logo-cont">-->
+<!--        <img src="./sitemedia/logo.png" alt="me" />-->
+<!--      </div>-->
 
-      <nav class="destop-nav">
-        <a href="index.html">Home</a>
+<!--      <nav class="destop-nav">-->
+<!--        <a href="index.html">Home</a>-->
+<!--        <a href="./pages/work.html">Projects</a>-->
+<!--        <a href="./pages/projects.html">Work Experience</a>-->
+<!--        <a href="./pages/contact.html">Contact</a>-->
+<!--      </nav>-->
+
+
+      <nav class="desktop-nav">
+        <a href="index.html" class="active">Home</a>
         <a href="./pages/work.html">Projects</a>
         <a href="./pages/projects.html">Work Experience</a>
         <a href="./pages/contact.html">Contact</a>
       </nav>
+
 
       <nav class="mobile-nav">
         <i class="fas fa-bars" id="barsIcon"></i>
