--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,16 +15,24 @@
   </head>
   <body>
     <header>
-      <div class="logo-cont">
-        <img src="../sitemedia/logo.png" alt="me" />
-      </div>
+<!--      <div class="logo-cont">-->
+<!--        <img src="../sitemedia/logo.png" alt="me" />-->
+<!--      </div>-->
 
-      <nav class="destop-nav">
+<!--      <nav class="destop-nav">-->
+<!--        <a href="../index.html">Home</a>-->
+<!--        <a href="work.html">Projects</a>-->
+<!--        <a href="projects.html">Work Experience</a>-->
+<!--        <a href="contact.html">Contact</a>-->
+<!--      </nav>-->
+
+      <nav class="desktop-nav">
         <a href="../index.html">Home</a>
         <a href="work.html">Projects</a>
         <a href="projects.html">Work Experience</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" class="active">Contact</a>
       </nav>
+
 
       <nav class="mobile-nav">
         <i class="fas fa-bars" id="barsIcon"></i>
